// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test case for Anomalies alert notification method selection Should be able to add new channel 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <span
          class="bp3-icon bp3-icon-cross StyledProps--main closeBtn"
          data-testid="crossModal"
          icon="cross"
        >
          <svg
            data-icon="cross"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              cross
            </desc>
            <path
              d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-variation-h5"
          >
            
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--font-variation-small"
          >
            ce.anomalyDetection.notificationAlerts.notificationStepSubtext
          </p>
        </div>
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main addChannelWrapper"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-variation-h6"
          >
            ce.anomalyDetection.notificationAlerts.alertChannelHeading
          </p>
          <div
            class="alertChannelWrapper"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-xlarge StyledProps--main addAlertChannel"
            >
              <div
                class="bp3-form-group channelSelection"
                data-id="alertList.0.channelName-0"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="alertList.0.channelName"
                          placeholder="- ce.anomalyDetection.notificationAlerts.selectChannelPlaceholder -"
                          style="padding-right: 0px;"
                          type="text"
                          value=""
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                            icon="chevron-down"
                          >
                            <svg
                              data-icon="chevron-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                chevron-down
                              </desc>
                              <path
                                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group urlInput"
                data-id="alertList.0.channelUrl-1"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="alertList.0.channelUrl"
                      placeholder="ce.anomalyDetection.notificationAlerts.urlInputPlaceholder"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <span
                class="bp3-icon StyledProps--main"
                data-icon="main-trash"
                data-testid="deleteChannel"
              >
                <svg
                  height="16"
                  viewBox="0 0 16 20"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                    fill="currentColor"
                    fill-rule="evenodd"
                    opacity="0.3"
                  />
                </svg>
              </span>
            </div>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main addChannelBtn Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                icon="plus"
              >
                <svg
                  data-icon="plus"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    plus
                  </desc>
                  <path
                    d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                ce.anomalyDetection.notificationAlerts.addChannelBtn
              </span>
            </button>
          </div>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main actionBtn"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-tertiary"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
              icon="chevron-left"
            >
              <svg
                data-icon="chevron-left"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-left
                </desc>
                <path
                  d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              back
            </span>
          </button>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
            data-testid="submitForm"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              saveAndContinue
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test case for Anomalies alert notification method selection Should be able to delete row on delete icon click 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <span
          class="bp3-icon bp3-icon-cross StyledProps--main closeBtn"
          data-testid="crossModal"
          icon="cross"
        >
          <svg
            data-icon="cross"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              cross
            </desc>
            <path
              d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-variation-h5"
          >
            
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--font-variation-small"
          >
            ce.anomalyDetection.notificationAlerts.notificationStepSubtext
          </p>
        </div>
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main addChannelWrapper"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-variation-h6"
          >
            ce.anomalyDetection.notificationAlerts.alertChannelHeading
          </p>
          <div
            class="alertChannelWrapper"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-xlarge StyledProps--main addAlertChannel"
            >
              <div
                class="bp3-form-group channelSelection"
                data-id="alertList.0.channelName-0"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="alertList.0.channelName"
                          placeholder="- ce.anomalyDetection.notificationAlerts.selectChannelPlaceholder -"
                          style="padding-right: 0px;"
                          type="text"
                          value=""
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                            icon="chevron-down"
                          >
                            <svg
                              data-icon="chevron-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                chevron-down
                              </desc>
                              <path
                                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group urlInput"
                data-id="alertList.0.channelUrl-1"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="alertList.0.channelUrl"
                      placeholder="ce.anomalyDetection.notificationAlerts.urlInputPlaceholder"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <span
                class="bp3-icon StyledProps--main"
                data-icon="main-trash"
                data-testid="deleteChannel"
              >
                <svg
                  height="16"
                  viewBox="0 0 16 20"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                    fill="currentColor"
                    fill-rule="evenodd"
                    opacity="0.3"
                  />
                </svg>
              </span>
            </div>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main addChannelBtn Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                icon="plus"
              >
                <svg
                  data-icon="plus"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    plus
                  </desc>
                  <path
                    d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                ce.anomalyDetection.notificationAlerts.addChannelBtn
              </span>
            </button>
          </div>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main actionBtn"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-tertiary"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
              icon="chevron-left"
            >
              <svg
                data-icon="chevron-left"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-left
                </desc>
                <path
                  d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              back
            </span>
          </button>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
            data-testid="submitForm"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              saveAndContinue
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test case for Anomalies alert notification method selection Should be able to load alert method selection screen 1`] = `
<div>
  <div>
    <input
      name=""
      type="text"
    />
  </div>
</div>
`;

exports[`Test case for Anomalies alert notification method selection Should be able to render 1st screen on back click 1`] = `
<div>
  <span
    class="bp3-icon bp3-icon-cross StyledProps--main closeBtn"
    data-testid="crossModal"
    icon="cross"
  >
    <svg
      data-icon="cross"
      height="16"
      viewBox="0 0 16 16"
      width="16"
    >
      <desc>
        cross
      </desc>
      <path
        d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <div
    class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-variation-h5"
    >
      
    </p>
    <p
      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--font-variation-small"
    >
      ce.anomalyDetection.notificationAlerts.notificationStepSubtext
    </p>
  </div>
  <div
    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main addChannelWrapper"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-variation-h6"
    >
      ce.anomalyDetection.notificationAlerts.alertChannelHeading
    </p>
    <div
      class="alertChannelWrapper"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-xlarge StyledProps--main addAlertChannel"
      >
        <div
          class="bp3-form-group channelSelection"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-popover-wrapper Select--main bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="alertList.0.channelName"
                    placeholder="- ce.anomalyDetection.notificationAlerts.selectChannelPlaceholder -"
                    style="padding-right: 0px;"
                    type="text"
                    value=""
                  />
                  <span
                    class="bp3-input-action"
                  >
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group urlInput"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="alertList.0.channelUrl"
                placeholder="ce.anomalyDetection.notificationAlerts.urlInputPlaceholder"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <span
          class="bp3-icon StyledProps--main"
          data-icon="main-trash"
          data-testid="deleteChannel"
        >
          <svg
            height="16"
            viewBox="0 0 16 20"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
              fill="currentColor"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
              fill="currentColor"
              fill-rule="evenodd"
              opacity="0.3"
            />
          </svg>
        </span>
      </div>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main addChannelBtn Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          ce.anomalyDetection.notificationAlerts.addChannelBtn
        </span>
      </button>
    </div>
  </div>
  <div
    class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main actionBtn"
  >
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-tertiary"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
        icon="chevron-left"
      >
        <svg
          data-icon="chevron-left"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-left
          </desc>
          <path
            d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        back
      </span>
    </button>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
      data-testid="submitForm"
      type="submit"
    >
      <span
        class="bp3-button-text"
      >
        saveAndContinue
      </span>
      <span
        class="bp3-icon bp3-icon-chevron-right StyledProps--main"
        icon="chevron-right"
      >
        <svg
          data-icon="chevron-right"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-right
          </desc>
          <path
            d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
